--- a/web/utils/static/css/tomo.css
+++ b/web/utils/static/css/tomo.css
@@ -80,16 +80,29 @@ li:hover .tomo-teacher-switch, .tomo-students li:focus .tomo-teacher-switch { di
 .tomo-courses .media-right { float: right; margin-right: 20px; }
 .tomo-courses button { border: none; background-color: rgba(215, 160, 44, .2); color: #D7A02C; }
 
-.tomo-chapter-heading { margin-left: 20px; }
-.tomo-chapter-heading .pull-left { margin-top: 20px; }
-.tomo-chapter-heading h2 { padding-left: 80px; }
-.tomo-chapter-heading h2 span { margin-top: -15px; display: block; }
-.tomo-chapter-heading .btn-default { padding-top: 10px; background-color: #878F28; color: #fff; }
+.tomo-chapter-heading { margin-left: 0px; }
+.tomo-chapter-heading span { margin: 10px 0 0 0; }
+.tomo-chapter-heading a.btn { padding: 0; }
+.tomo-chapter-heading hr { margin-left: 10px; }
+.tomo-chapter-heading .caret {}
+.tomo-chapter-heading .btn { padding-top: 10px; background: none; border: none; color: #878F28; }
+.tomo-chapter-heading .btn:hover, .tomo-chapter-heading .btn:focus, .tomo-chapter-heading .open>.btn
+  { color: #AF982A; background: none; border: none; }
+.tomo-chapter-heading [type="button"]:active { box-shadow: none; }
+.tomo-chapter-heading .caret { padding-bottom: 13px; }
 .tomo-task-heading .btn-default { width: 40px; color: #fff; }
+.tomo-task-heading .dropdown-toggle { padding: 5px 8px; text-align: center; }
+.tomo-task-heading .caret { margin: 0 0 -5px -2px; }
 .tomo-task-heading .download-btn { background-color: #878F28; }
 .tomo-task-heading .solutions-btn { background-color: #D7A02C; }
-.tomo-task-heading .edit-btn { border: none; background-color: rgba(215, 160, 44, .2); color: #D7A02C; }
-.tomo-task-heading .trash-btn:hover { background-color: #A92D2D; }
+.tomo-task-heading .edit-btn { border: 1px solid #ccc; background-color: rgba(215, 160, 44, .2); color: #D7A02C; }
+.tomo-task-heading .edit-btn:hover { background-color: rgba(175, 152, 42, .2); color: #AF982A; }
+.tomo-task-heading .trash-btn:hover { background-color: rgba(169, 45, 45, .2); color: #A92D2D; }
+.tomo-subtasks p { font-weight: 300; }
+.tomo-col-noleftpadding { padding-left: 0; }
+.tomo-add-task { background-color: #878F28; color: #fff; }
+.tomo-add-task i { margin-right: 10px; }
+.tomo-add-task:hover { background-color: rgba(175, 152, 42, .2); color: #AF982A; }
 
 .tomo-other { margin: 0; padding: 0; }
 .tomo-other .col-md-4 { margin-right: 0px; height: 15em; padding: 2em 4em; }
@@ -102,7 +115,18 @@ li:hover .tomo-teacher-switch, .tomo-students li:focus .tomo-teacher-switch { di
 .tomo-other .tomo-enroll .fa-star, .tomo-enroll:hover .fa-star-o { display: none; }
 .tomo-other .tomo-enroll:hover .fa-star { display: inline; color: #D7A02C; }
 
+.tomo-overview-student { margin-top: 3em; }
+.tomo-overview-student h3 { font-size: 1.2em; }
+.tomo-overview-student table { font-weight: 300; margin-top: 1em; }
+.tomo-overview-student .table>tbody>tr>td { border: none; border-bottom: 1px solid #e7e7e7; }
+.tomo-overview-student .row { border-top: 3px solid #e7e7e7; margin-bottom: 2em; }
+/* .tomo-overview-student .container .row:nth-child(even) { background-color: #eee; }
+.tomo-overview-student .container .row:nth-child(odd) { background-color: #fff; } */
+
 .tomo-task-solutions { margin-top: 2em; }
+.tomo-task-solutions .tomo-pre { white-space: pre-wrap; font-family: monospace; background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px; padding: 5px 7px; }
 .tomo-task { margin: 1em 0; }
 .tomo-solution-user {
   margin: 0;
@@ -131,8 +155,6 @@ li:hover .tomo-teacher-switch, .tomo-students li:focus .tomo-teacher-switch { di
 }
 .tomo-solution-code-user { margin-left: 30px; }
 .tomo-solution-code-official { margin-right: 30px; }
-.tomo-solution-code-user pre, .tomo-solution-code-official pre {
-  width: 100%; margin: 0; }
 
 footer img { max-width: 100%; max-height: 6em; margin-bottom: 20px; }
 
@@ -144,8 +166,59 @@ footer img { max-width: 100%; max-height: 6em; margin-bottom: 20px; }
   #sidebar.affix-top { position: static; margin-top: 30px; width: 228px; }
   #sidebar.affix { position: fixed; top: 70px; width: 228px; }
 }
-#sidebar a { font-size: 1.2em;  }
+#sidebar a { font-size: 1em;  }
+#sidebar li { margin: 5px 0; }
 #sidebar li.active { background-color: #fff; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; }
 #sidebar .subtasks { overflow: auto; }
-#sidebar .subtasks a { font-size: 0.8em; display: block; width: 2em; text-align: right; margin: 5px; float: left; }
+#sidebar .subtasks a { font-size: 0.8em; display: block; width: 2em; text-align: right; margin: 5px 5px 5px 40px; float: left; }
 #sidebar .subtasks .chart { float: right; margin: .05em 0 0 5px; }
+
+
+/* Same height columns */
+.inside {}
+.inside-full-height {
+  /* if you want to give content full height give him height: 100%;
+  // with content full height you can't apply margins to the content
+  // content full height does not work in ie http://stackoverflow.com/questions/27384433/ie-display-table-cell-child-ignores-height-100 */
+  height: 100%; margin: 0;
+}
+.content { padding: 0; height: 100%; }
+.content .tomo-solution-code-official { padding: 0; background: #eee; height: 100%; }
+.content .tomo-solution-code-user { padding: 0; background: #eee; height: 100%; }
+.content .tomo-solution-code-official .tomo-pre { margin: 0; height: 100%; }
+
+/* columns of same height styles */
+.row-height { display: table; table-layout: fixed; height: 100%; width: 100%; }
+.col-height { display: table-cell; float: none; height: 100%; }
+.col-top { vertical-align: top; }
+.col-middle { vertical-align: middle; }
+.col-bottom { vertical-align: bottom; }
+
+@media (min-width: 480px) {
+  .row-xs-height { display: table; table-layout: fixed; height: 100%; width: 100%; }
+  .col-xs-height { display: table-cell; float: none; height: 100%; }
+  .col-xs-top { vertical-align: top; }
+  .col-xs-middle { vertical-align: middle; }
+  .col-xs-bottom { vertical-align: bottom; }
+}
+@media (min-width: 768px) {
+  .row-sm-height { display: table; table-layout: fixed; height: 100%; width: 100%; }
+  .col-sm-height { display: table-cell; float: none; height: 100%; }
+  .col-sm-top { vertical-align: top; }
+  .col-sm-middle { vertical-align: middle; }
+  .col-sm-bottom { vertical-align: bottom; }
+}
+@media (min-width: 992px) {
+  .row-md-height { display: table; table-layout: fixed; height: 100%; width: 100%; }
+  .col-md-height { display: table-cell; float: none; height: 100%; }
+  .col-md-top { vertical-align: top; }
+  .col-md-middle { vertical-align: middle; }
+  .col-md-bottom { vertical-align: bottom; }
+}
+@media (min-width: 1200px) {
+  .row-lg-height { display: table; table-layout: fixed; height: 100%; width: 100%; }
+  .col-lg-height { display: table-cell; float: none; height: 100%; }
+  .col-lg-top { vertical-align: top; }
+  .col-lg-middle { vertical-align: middle; }
+  .col-lg-bottom { vertical-align: bottom; }
+}
