--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -13,7 +13,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/startbootstrap-landing-page/1.0.4/css/landing-page.min.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Open Sans:300,400,700,300italic,400italic,700italic" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css" rel="stylesheet">      
     <link href="{% static 'css/tomo.css' %}" rel="stylesheet">
   </head>
