--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -60,7 +60,7 @@
           <div id="{{ problem.anchor }}" class="panel-heading">
             <div class="row">
               <div class="col-md-6">
-                <h4>{{ problem.title }}</h4>
+                <h5>{{ problem.title }}</h5>
               </div>
               <div class="col-md-6">
                 <span class="pull-right">
@@ -135,12 +135,12 @@
           </div>
           {% endif %}
 
-          <ul class="list-group">
+          <ul class="list-group tomo-subtasks">
             {% for part in problem.parts.all %}
             <li class="list-group-item" id="{{ part.anchor }}">
               {# Translators: problem set detail #}
-              <p>{{ forloop.counter }}. {% trans "part" %}</p>
-              {{ part.description|latex_markdown }}
+              <h5>{{ forloop.counter }}. {% trans "part" %}</h5>
+              <p>{{ part.description|latex_markdown }}</p>
             </li>
             {% endfor %}
           </ul>
@@ -148,7 +148,7 @@
         {% endfor %}
         {% if show_teacher_forms %}
         <hr>
-                    <button class="btn btn-default btn-lg btn-for-modal" aria-label="Create" data-url="{% url 'problem_create' problem_set.id %}">
+                    <button class="btn btn-default btn-lg btn-for-modal tomo-add-task" aria-label="Create" data-url="{% url 'problem_create' problem_set.id %}">
                 <i class="fa fa-download fa-plus"></i>
                      {# Translators: Button for creating new problem. #}
                      {% trans "Add new problem" %}
