--- a/web/templates/courses/problem_set_progress.html
+++ b/web/templates/courses/problem_set_progress.html
@@ -35,9 +35,9 @@
               <td width='60%'>
                 {% for attempt in attempts %}
                 <a href="{% url 'problem_solution' problem.pk observed_user.pk %}">
-                  {% if attempt.valid %}<i class="color5 fa fa-circle"></i>
-                  {% elif attempt %}<i class="color3 fa fa-circle"></i>
-                  {% else %}<i class="color1 fa fa-circle"></i>
+                  {% if attempt.valid %}<i class="color5 fa fa-circle fa-lg"></i>
+                  {% elif attempt %}<i class="color3 fa fa-circle fa-lg"></i>
+                  {% else %}<i class="color1 fa fa-circle fa-lg"></i>
                   {% endif %}
                 </a>
                 {% endfor %}
