--- a/web/templates/homepage.html
+++ b/web/templates/homepage.html
@@ -47,7 +47,7 @@
           {% endfor %}
         </p>
         <p class="tomo-institution">
-          @{% templatetag openbrace %}{{ course.organization_title }}{% templatetag closebrace %}
+          @{% templatetag openbrace %}{{ course.institution }}{% templatetag closebrace %}
         </p>
       </div>
       {% cycle '' '' '</div><div class="row">' %}
