Update terms of service

--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -84,6 +84,7 @@
           {% blocktrans %}
           By logging in you agree to our
           <a href="{{ terms_of_service_url }}">Terms of service</a>.
+          Our website uses cookies.
           {% endblocktrans %}
         </small></p>
       </div>
