--- a/web/templates/terms_of_service.html
+++ b/web/templates/terms_of_service.html
@@ -65,7 +65,7 @@ Za zagotavljanje kakovostne uporabe storitev se uporabnik zavezuje, da bo pri do
 
 ### 8. Splošna priporočila uporabnikom
 
-Uporabnik naj skrbno hrani svoje geslo in uporabniško ime ter uporablja storitev v skladu z navodili in priporočili ponudnika ter navodili ponudnika poti. Uporabniki naj se zavedajo, da so kljub skrbi in nadzoru storitev možne zlorabe. Ponudnik storitve bo o vseh spremembah in novostih svoje uporabnike obveščal na vseh mestih, kjer so objavljena navodila in pogoji uporabe.
+Uporabnik naj uporablja storitev v skladu z navodili in priporočili ponudnika ter navodili ponudnika poti. Uporabniki naj se zavedajo, da so kljub skrbi in nadzoru storitev možne zlorabe. Ponudnik storitve bo o vseh spremembah in novostih svoje uporabnike obveščal na vseh mestih, kjer so objavljena navodila in pogoji uporabe.
 
 ### 9. Spletni piškotki in pridobivanje javno dostopnih podatkov
 
@@ -86,11 +86,13 @@ Uporabnik se mora zavedati, da:
 
 ### 11. Uporabnik se zaveže, da:
 
-* storitve ne bo izrabljal v komercialne, nelegalne ali katere koli druge namene kot tiste, ki so določeni v teh pogojih uporabe;
-* ne bo distribuiral avtorsko zaščitenih vsebin ali vsebin, ki se nahajajo v storitvi Projekt Tomo;
-* ne bo poskušal pridobiti, zbirati in/ali shranjevati osebnih podatkov drugih uporabnikov;
-* ne bo na noben način kopiral, shranjeval ali posredoval celotne ali delov vsebine storitve Projekt Tomo;
-* ne bo uporabljal računalniških kod, škodljivih programov ali česar koli, kar bi lahko motilo, onesposobilo ali škodovalo tej storitvi, ponudniku storitev in njegovi programski ter strojni opremi, ponudniku poti ter telekomunikacijskim napravam.
+1. storitve ne bo izrabljal v komercialne, nelegalne ali katere koli druge namene kot tiste, ki so določeni v teh pogojih uporabe;
+2. ne bo distribuiral avtorsko zaščitenih vsebin ali vsebin, ki se nahajajo v storitvi Projekt Tomo;
+3. ne bo poskušal pridobiti, zbirati in/ali shranjevati osebnih podatkov drugih uporabnikov;
+4. ne bo na noben način kopiral, shranjeval ali posredoval celotne ali delov vsebine storitve Projekt Tomo;
+5. ne bo uporabljal računalniških kod, škodljivih programov ali česar koli, kar bi lahko motilo, onesposobilo ali škodovalo tej storitvi, ponudniku storitev in njegovi programski ter strojni opremi, ponudniku poti ter telekomunikacijskim napravam.
+
+Točka 4. ne vključuje vsebin nalog, saj so te smatrane kot javna last (public domain). Uporabnik prevzema vso odgovornost, če v naloge, ki jih ponudi na storitvi, doda vsebino, ki ni v javni lasti. 
 
 ### 12. Namen obdelave in varstvo osebnih podatkov
 
@@ -104,7 +106,7 @@ Podatki bodo varovani skladno z zahtevami zakona, ki ureja varstvo osebnih podat
 
 Ponudnik se zavezuje, da bo zbrane podatke hranil le toliko časa, kolikor bo nujno potrebno za dosego namena, zaradi katerega so bili zbrani.
 
-Uporabnik v postopku registracije posreduje zahtevane osebne podatke. Uporabnik zagotovi, da bo s svojim uporabniškim imenom in z geslom upravljal izključno sam. Vsak uporabnik samostojno odgovarja za vsebine, ki jih vpiše ob prijavi v storitev Projekt Tomo. Storitev Projekt Tomo omogoča registracijo tudi s pomočjo uporabniškega imena in gesla pri Google ali Facebook.
+Uporabnik v postopku registracije posreduje zahtevane osebne podatke. Uporabnik zagotovi, da bo s svojim uporabniškim računom upravljal izključno sam. Vsak uporabnik samostojno odgovarja za vsebine, ki jih vpiše ob prijavi v storitev Projekt Tomo. Storitev Projekt Tomo omogoča registracijo tudi s pomočjo uporabniškega imena in gesla pri Google ali Facebook.
 
 Uporabnik potrjuje, da je bil pred registracijo ustrezno seznanjen z obsegom in namenom obdelave osebnih podatkov, ki jih je dal na voljo upravljavcu ob registraciji.
 
@@ -128,6 +130,8 @@ Osebni podatki obsegajo tudi tiste, ki jih ponudnik obdeluje v času, ko je upor
 * IP številka računalnika, s katerim se prijavlja na spletno stran.
 * spletna stran, s katere je uporabnik prispel v storitev Projekt Tomo,
 * osebne preference uporabnika v zvezi s storitvijo.
+
+Poleg osebnih podatkov se na storitvi hranijo tudi vse rešitve nalog, ki jih je uporabnik oddal med uporabo storitve.
 
 Ponudnik se obvezuje, da podatkov ne bo posredoval tretjim osebam, razen kolikor je to v skladu z veljavno zakonodajo. V času upravljanja z osebnimi podatki ima posameznik možnost vpogleda, prepisa, kopiranja, dopolnitve, popravkov, blokiranja in izbrisa osebnih podatkov v zbirki podatkov, skladno z veljavno zakonodajo.
 
