--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -38,7 +38,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     {# Translators: Link for logout in navigation bar (top right) #}
                     <li><a href="{% url 'logout' %}?next={% url 'login' %}">{{ user.get_full_name }} {% trans "(logout)" %}</a></li>
-                    <li><a href="{% url 'help' %}"><i style="top: -0.7em; height: 0em; position: relative"; class="fa fa-question-circle fa-2x"></i><span class="sr-only">{% trans 'Help' %}</span></a></li>
+                    <li><a href="{% url 'help' %}"><i class="fa fa-question-circle fa-lg"></i><span class="sr-only">{% trans 'Help' %}</span></a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
