--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     {# Translators: Link for logout in navigation bar (top right) #}
-                    <li><a href="{% url 'logout' %}?next={% url 'login' %}">{{ user.get_full_name }} {% trans "(logout)" %}</a></li>
+                    <li><a href="{% if user.uses_shibboleth %}/Shibboleth.sso/Logout?return={% else %}{% url 'logout' %}?next={% endif %}{% url 'login' %}">{{ user.get_full_name }} {% trans "(logout)" %}</a></li>
                     <li><a href="{% url 'help' %}"><i class="fa fa-question-circle fa-lg"></i><span class="sr-only">{% trans 'Help' %}</span></a></li>
                 </ul>
             </div>
